--- a/style/global.scss
+++ b/style/global.scss
@@ -60,6 +60,7 @@ body {
 
 #blog {
 	background-color: #212227;
+  position: relative;
 }
 
 #map {
